--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix Croatia - Watch TV Shows Online, Watch Movies Online</title>
+    <script type="module" crossorigin src="/netflix-clone/assets/index.3da3b6f1.js"></script>
+    <link rel="stylesheet" href="/netflix-clone/assets/index.7900785e.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    
   </body>
 </html>
